# sbgMEG_eyetools

./: .gitignore  README.md  pyproject.toml
examples/: example_calibration.ipynb  example_eye_descriptives.ipynb
eyetools/: alignETMEGbyblinks.py  annotateblinks.py  calibrationchecker.py  eye_descriptives.py  readeyes.py  shiftsignals.py
tests/: example_MEG_eyechannels.py  example_Vpixx.py  example_Vpixx2.py  example_addblink.py  example_basic_eyedescriptives.py  example_calibration.py  example_events_Annika.py  example_selectchan.py  example_xdf.py  exmample_findshift.py  snipp_testMNE.py
