[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "sbgmeg_eyetools"
version = "0.1.0"
description = "Eye tools for Salzburg MEG workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nathan Weisz & MyMate ChatGPT" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "mne",
  "opencv-python",
  "neurokit2"
]

[tool.hatch.build.targets.wheel]
packages = ["eyetools"]
